--- a/templates/intro_index.html
+++ b/templates/intro_index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../static/css/intro_index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>인공지능솔루션 적대적공격 위협분석 AI보안전문가 2회차</h1>
+  </body>
 </html>
