--- a/templates/intro_index.html
+++ b/templates/intro_index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>인공지능솔루션 적대적공격 위협분석 AI보안전문가 2회차</h1>
+    <h1>
+      ╰(*°▽°*)╯(●'◡'●)인공지능솔루션 적대적공격 위협분석 AI보안전문가 2회차
+    </h1>
   </body>
 </html>
