--- a/templates/regression_coin.html
+++ b/templates/regression_coin.html
@@ -72,5 +72,17 @@
         <div id="result" style="overflow-y: auto"></div>
       </div>
     </div>
+    <div
+      id="loader"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 99vh;
+        text-align: center;
+        background: yellow;
+        opacity: 0.5;
+      "
+    ></div>
   </body>
 </html>
