--- a/templates/intro_index.html
+++ b/templates/intro_index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/intro_index.css" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>Document</title>
     <script src="{{url_for('static',filename='js/regression_coin.js')}}"></script>
   </head>
