--- a/templates/regression_coin.html
+++ b/templates/regression_coin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/intro_index.css" />
     <link rel="stylesheet" href="../static/css/regression_coin.css" />
+    <link rel="icon" href="/static/favicon.ico" />
     <script src="{{url_for('static',filename='js/regression_coin.js')}}"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
@@ -50,7 +51,7 @@
         id="res_contain"
         style="
           width: 99vw;
-          height: calc(99vh-8rem);
+          height: calc(99vh - 8rem);
           background: whitesmoke;
           display: none;
           position: fixed;
