--- a/templates/intro_index.html
+++ b/templates/intro_index.html
@@ -27,7 +27,9 @@
       <a href="/page/regression_coin"
         >1.다중선형회귀분석 실전모델 구현(가상화폐)</a
       >
-      <a>2. 자연어 처리를 위한 실전모델 구현(쇼핑리뷰)</a>
+      <a href="/page/nlp_review"
+        >2. 자연어 처리를 위한 실전모델 구현(쇼핑리뷰)</a
+      >
     </div>
     <img
       id="mychar"
